# nccompress

./: .travis.yml  README.md  README.rst  chunk_shape_3D.py  chunk_shape_nD.py  conftest.py  nc2nc  nc_compress  nc_compress.py  nccopy_test.py  ncfind  ncinfo  requirements.txt  setup.cfg
.circleci/: config.yml
conda/: dev-environment.yml  meta.yaml
docs/: Makefile  conf.py  index.rst  readme.rst
nccompress/: __init__.py  nc2nc.py  nccompress.py  ncfind.py  ncinfo.py
test/: test_nc2nc.py  test_nc_compress.py  test_nccompress.py  test_nccopy.py  test_ncfind.py  utils.py
