[metadata]
name = nccompress
author = Aidan Heerdegen
author-email = aidan.heerdegen@anu.edu.au
summary = Tool to compress directories of netCDF files
description-file = README.rst
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages = 
    nccompress

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py
    conftest.py
    test

[extras]
# Optional dependencies
dev = 
    pytest
    sphinx
    recommonmark

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore conftest.py --ignore docs/conf.py
